--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Musicdot</title>
-    <link rel="icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,
-    600,700,&display=block">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/cabecalho.css">
-    <link rel="stylesheet" href="css/rodape.css">
-    <link rel="stylesheet" href="css/form-newsletter.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Musicdot</title>
+        <link rel="icon" href="img/favicon.ico">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,
+        600,700,&display=block">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/cabecalho.css">
+        <link rel="stylesheet" href="css/rodape.css">
+        <link rel="stylesheet" href="css/form-newsletter.css">
+    </head>
     <body>
 
         <header class="cabecalho">
             <a href="index.html">
-                <img class="cabecalho__logo" src="img/musicdot-logo-light.svg" title="Ir para a página i
-                nicial da Musicdot" alt="Musicdot">
+                <img class="cabecalho__logo" src="img/musicdot-logo-light.svg" title="Ir para a página inicial da Musicdot" alt="Musicdot">
             </a>
 
             <nav>
@@ -50,17 +49,19 @@
                 <ul class="rodape__lista-midias-sociais">
                     <li class="rodape__item-midias-sociais">
                         <a href="https://www.facebook.com/musicdotonline">
-                        <img src="img/footer-icone-facebook.svg" alt="MusicDot no Facebook">
+                            <img src="img/footer-icone-facebook.svg" alt="MusicDot no Facebook">
                         </a>
                     </li>
+
                     <li class="rodape__item-midias-sociais">
                         <a href="https://www.youtube.com/user/musicdotonline">
-                        <img src="img/footer-icone-youtube.svg" alt="MusicDot no YouTube">
+                            <img src="img/footer-icone-youtube.svg" alt="MusicDot no YouTube">
                         </a>
                     </li>
+
                     <li class="rodape__item-midias-sociais">
                         <a href="https://www.instagram.com/musicdotonline/">
-                        <img src="img/footer-icone-instagram.svg" alt="Instagram">
+                            <img src="img/footer-icone-instagram.svg" alt="Instagram">
                         </a>
                     </li>
                 </ul>
@@ -108,11 +109,9 @@
                 <form action="#" method="get" class="form-newsletter">
                     <label for="form-newsletter__label" class="form-newsletter__label">
                         Seu email pessoal
-                        42.2 PASSO A PASSO COM CÓDIGO 179
                     </label>
                 
-                    <input id="email-newsletter" name="email-newsletter" type="email" class="form-newslett
-                    er__campo">
+                    <input id="email-newsletter" name="email-newsletter" type="email" class="form-newsletter__campo">
                     <button type="submit" class="form-newsletter__botao">
                         OK
                     </button>
