--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-        <header class="cabecalho">
+        <header class="cabecalho container">
             <a href="index.html">
                 <img class="cabecalho__logo" src="img/musicdot-logo-light.svg" title="Ir para a página inicial da Musicdot" alt="Musicdot">
             </a>
@@ -32,7 +32,7 @@
             Conteúdo principal
         </main>
 
-        <footer class="rodape">
+        <footer class="rodape container">
             <section class="rodape__secao rodape__secao--sobre">
                 <img class="rodape__logo" src="img/logo.svg" alt="Logo da MusicDot">
                 
